Filter and display episodes by release year.